Melhorei varias coisas

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -26,6 +26,7 @@ body {
 
 nav {
     display: flex;
+    padding-left: 6%;
     align-items: center;
     margin-bottom: 10vh;
     width: 100%;
@@ -33,15 +34,18 @@ nav {
 }
 
 nav #logo {
+    display: inline-block;
+    padding: 0.1px;
     background-color: rgb(26, 25, 25);
-    padding: 4px 7px 7px 4px;
     font-size: 2.7em;
 }
 
 nav #logo #orange {
-    font-size: 0.9em;
-    padding: 0 4px;
-    background-color: rgb(230, 144, 15);
+    display: inline-block;
+    font-size: 0.95em;
+    color: black !important;
+    padding: 7px;
+    background-color: rgb(235, 142, 4);
     color: var(--light-color)
 }
 
@@ -54,7 +58,12 @@ nav a {
 }
 
 p, h1 {
-    margin-bottom: 6px;
+    margin-bottom: 15px;
+}
+
+h2 {
+    margin-bottom: 8px;
+    font-size: 1.7em;
 }
 
 #header {
@@ -80,6 +89,7 @@ main p {
 }
 
 main li {
+    margin-bottom: 14px;
     font-size: 1.1em;
 }
 
@@ -87,6 +97,21 @@ input[type=file] {
     margin-bottom: 10px;
 }
 
+.dark-text {
+    padding: 4px;
+    background-color: #222;
+}
+
 #result pre {
     background-color: var(--dark-color);
+}
+
+
+#h-header, #h-main {
+    max-width: 1024px;
+    margin: auto;
+}
+
+#h-header p {
+    font-size: 1.18em;
 }
